--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_svg: ^1.1.6
   fl_chart: ^0.55.2
   provider: ^6.0.5
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
