--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.14
   image_picker: ^0.8.6+4
-  uuid: ^3.0.7
+  file_picker: ^5.2.6
 
 dev_dependencies:
   flutter_test:
